; ModuleID = '/home/carl/AnghaBench/linux/fs/gfs2/extr_glops.c_iopen_go_callback.c'
source_filename = "/home/carl/AnghaBench/linux/fs/gfs2/extr_glops.c_iopen_go_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gfs2_glock = type { i64, i64, %struct.TYPE_3__, i32, %struct.TYPE_4__, %struct.gfs2_inode* }
%struct.TYPE_3__ = type { i32 }
%struct.TYPE_4__ = type { %struct.gfs2_sbd* }
%struct.gfs2_sbd = type { i32 }
%struct.gfs2_inode = type { i32 }

@LM_ST_UNLOCKED = common dso_local global i64 0, align 8
@LM_ST_SHARED = common dso_local global i64 0, align 8
@gfs2_delete_workqueue = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gfs2_glock*, i32)* @iopen_go_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @iopen_go_callback(%struct.gfs2_glock* %0, i32 %1) #0 {
  %3 = alloca %struct.gfs2_glock*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.gfs2_inode*, align 8
  %6 = alloca %struct.gfs2_sbd*, align 8
  store %struct.gfs2_glock* %0, %struct.gfs2_glock** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %8 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %7, i32 0, i32 5
  %9 = load %struct.gfs2_inode*, %struct.gfs2_inode** %8, align 8
  store %struct.gfs2_inode* %9, %struct.gfs2_inode** %5, align 8
  %10 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %11 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %10, i32 0, i32 4
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load %struct.gfs2_sbd*, %struct.gfs2_sbd** %12, align 8
  store %struct.gfs2_sbd* %13, %struct.gfs2_sbd** %6, align 8
  %14 = load i32, i32* %4, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %22

16:                                               ; preds = %2
  %17 = load %struct.gfs2_sbd*, %struct.gfs2_sbd** %6, align 8
  %18 = getelementptr inbounds %struct.gfs2_sbd, %struct.gfs2_sbd* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i64 @sb_rdonly(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %16, %2
  br label %56

23:                                               ; preds = %16
  %24 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %25 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @LM_ST_UNLOCKED, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %29, label %56

29:                                               ; preds = %23
  %30 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %31 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @LM_ST_SHARED, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %56

35:                                               ; preds = %29
  %36 = load %struct.gfs2_inode*, %struct.gfs2_inode** %5, align 8
  %37 = icmp ne %struct.gfs2_inode* %36, null
  br i1 %37, label %38, label %56

38:                                               ; preds = %35
  %39 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %40 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %39, i32 0, i32 2
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 8
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %41, align 8
  %44 = load i32, i32* @gfs2_delete_workqueue, align 4
  %45 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %46 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %45, i32 0, i32 3
  %47 = call i64 @queue_work(i32 %44, i32* %46)
  %48 = icmp eq i64 %47, 0
  br i1 %48, label %49, label %55

49:                                               ; preds = %38
  %50 = load %struct.gfs2_glock*, %struct.gfs2_glock** %3, align 8
  %51 = getelementptr inbounds %struct.gfs2_glock, %struct.gfs2_glock* %50, i32 0, i32 2
  %52 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 8
  %54 = add nsw i32 %53, -1
  store i32 %54, i32* %52, align 8
  br label %55

55:                                               ; preds = %49, %38
  br label %56

56:                                               ; preds = %22, %55, %35, %29, %23
  ret void
}

declare dso_local i64 @sb_rdonly(i32) #1

declare dso_local i64 @queue_work(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
